k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artificial-intelligence-api
  labels:
    app: artificial-intelligence-api
