k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artificial-intelligence-api-service
  namespace: artificial-intelligence-api
  labels:
    app: artificial-intelligence-api
spec:
  type: ClusterIP
  selector:
    app: artificial-intelligence-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
