k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artificial-intelligence-api-ingress
  namespace: artificial-intelligence-api
spec:
  ingressClassName: nginx
  rules:
    - host: ai-api.k8s.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artificial-intelligence-api-service
                port:
                  number: 80
